--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ menu_settings:
       url: '/contact'
 
 footer_settings:
-  footer_tagline: blah blah
+  footer_tagline: Hello, I'm Jono, a Sound Designer, Creativee Technologist and Arts Practitioner based in Sheffield UK
 
 hero_settings:
   overlay_opacity: 0.8
