--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ menu_settings:
       url: '/contact'
 
 footer_settings:
-  footer_tagline: 'test'
+  footer_tagline: test testing
 
 hero_settings:
   overlay_opacity: 0.8
