--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,6 @@ basic_settings:
   favicon_image: /images/favicon.png
 
 header_settings:
-  header_tagline: Sound Design and Creative Technology.
   logo_image: 
   logo_width: 200
 
@@ -59,7 +58,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'www.linkedin.com/in/jonathan-richards-06261b243'
 
 color_settings:
   background_color: '#ffffff'
