--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ header_settings:
 menu_settings:
   menu_items:
     - title: 'Projects'
-      url: '/Projects'
+      url: '/'
     - title: 'Blog'
       url: '/blog/'
     - title: 'About'
