--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,7 +35,7 @@ contact_settings:
 social_settings:
   facebook_url: ''
   twitter_url: ''
-  instagram_url: 'https://www.instagram.com/jono_ripples/'
+  instagram_url: 'www.instagram.com/jono_ripples'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
