--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: ''
+  twitter_url: 'bsky.app/profile/jonorichards.bsky.social'
   instagram_url: 'www.instagram.com/jono_ripples'
   snapchat_url: ''
   youtube_url: ''
