--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,7 +61,7 @@ social_settings:
   linkedin_url: 'www.linkedin.com/in/jonathan-richards-06261b243'
 
 color_settings:
-  background_color: '#000000'
+  background_color: '#ffffff'
   background_alt_color: '#f4f5f6'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
