--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -33,8 +33,8 @@ contact_settings:
   send_button_text: 'Send Message'
 
 social_settings:
-  facebook_url: ''
-  twitter_url: 'bsky.app/profile/jonorichards.bsky.social'
+  facebook_url: 'www.instagram.com/jono_ripples'
+  twitter_url: 'bsky.app/profile/jonorichards.sky.social'
   instagram_url: 'www.instagram.com/jono_ripples'
   snapchat_url: ''
   youtube_url: ''
@@ -55,7 +55,7 @@ social_settings:
   flickr_url: ''
   etsy_url: ''
   kickstarter_url: ''
-  soundcloud_url: ''
+  soundcloud_url: 'soundcloud.com/johnnysideways'
   spotify_url: ''
   bandcamp_url: ''
   linkedin_url: 'www.linkedin.com/in/jonathan-richards-06261b243'
