--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: 'https://bsky.app/profile/jonorichards.sky.social'
+  twitter_url: 'https://bsky.app/profile/did:plc:wrp4mo3c6eaj26qca2jtoncx'
   instagram_url: 'https://www.instagram.com/jono_ripples'
   snapchat_url: ''
   youtube_url: ''
